[gd_scene load_steps=17 format=2]

[ext_resource path="res://addons/angelica/Themes/SuperButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/angelica/Themes/EmojiPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/angelica/Login/Login.gd" type="Script" id=3]
[ext_resource path="res://addons/angelica/Login/LineEdit.gd" type="Script" id=4]
[ext_resource path="res://addons/angelica/Login/Sillyword.gd" type="Script" id=5]
[ext_resource path="res://addons/angelica/Login/Player.gd" type="Script" id=6]
[ext_resource path="res://addons/angelica/fonts/Player.tres" type="DynamicFont" id=9]
[ext_resource path="res://src/scenes/Player/Player.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.964706, 0.301961, 0.301961, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.964706, 1, 1, 1 )
border_width_left = 8
border_width_top = 4
border_width_right = 8
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.321569, 0.321569, 0.321569, 1 )
border_width_left = 2
border_width_right = 2
border_width_bottom = 1
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.820312, 0.820312, 0.820312, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.819608, 0.819608, 0.819608, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://addons/angelica/fonts/ComicNeue_Bold.otf"

[sub_resource type="DynamicFont" id=8]
size = 21
use_filter = true
extra_spacing_bottom = -5
font_data = SubResource( 7 )

[node name="Login" type="Node2D"]
position = Vector2( 128.48, 141.921 )
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 309.418, 391.077 ]
}

[node name="Panel" type="Panel" parent="."]
margin_top = 2.0
margin_right = 442.0
margin_bottom = 248.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
margin_left = 172.0
margin_top = -38.0
margin_right = 246.0
margin_bottom = 22.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="."]
margin_left = 25.0
margin_top = 113.0
margin_right = 420.0
margin_bottom = 218.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login" type="RichTextLabel" parent="."]
margin_left = 363.94
margin_top = 20.5243
margin_right = 425.94
margin_bottom = 97.5243
rect_clip_content = false
bbcode_enabled = true
bbcode_text = "[url=login][img]res://img/48/1f3ab.png[/img][/url]
[url=cancel][img]res://img/32/1f6c7.png[/img][/url]"
text = "
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSlider" type="VSlider" parent="."]
modulate = Color( 3, 0.94, 0.94, 1 )
margin_left = 151.102
margin_top = 124.949
margin_right = 170.102
margin_bottom = 205.949
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 2.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSliderG" type="VSlider" parent="."]
modulate = Color( 0.8, 2.5, 0.8, 1 )
margin_left = 188.776
margin_top = 123.746
margin_right = 209.776
margin_bottom = 204.746
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 2.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSliderB" type="VSlider" parent="."]
modulate = Color( 1, 1.82031, 4, 1 )
margin_left = 223.911
margin_top = 123.746
margin_right = 244.911
margin_bottom = 204.746
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 2.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuperButton" parent="." instance=ExtResource( 1 )]
position = Vector2( 187.944, -29.3554 )

[node name="LoadPlayer" type="Node2D" parent="."]
position = Vector2( 269.944, 120.367 )

[node name="Panel5" type="Panel" parent="LoadPlayer"]
margin_top = -1.0
margin_right = 132.0
margin_bottom = 94.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="LoadPlayer"]
margin_left = 4.0
margin_top = 5.0
margin_right = 129.0
margin_bottom = 86.0
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 10 )]
position = Vector2( 85.527, 198.169 )
script = ExtResource( 6 )

[node name="EmojiPanel" parent="Player" instance=ExtResource( 2 )]
visible = false
position = Vector2( -121.061, -108.802 )

[node name="Panel4" type="Panel" parent="."]
margin_left = 131.99
margin_top = 25.2508
margin_right = 363.99
margin_bottom = 62.2508
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 143.241
margin_top = 30.7492
margin_right = 352.241
margin_bottom = 62.7492
focus_next = NodePath("../Sillyword")
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color_selected = Color( 0.968627, 0.960784, 0.960784, 1 )
custom_colors/font_color = Color( 0.996078, 0.988235, 0.988235, 1 )
max_length = 16
clear_button_enabled = true
placeholder_text = "Player"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sillyword" type="LineEdit" parent="."]
margin_left = 131.463
margin_top = 70.2788
margin_right = 363.463
margin_bottom = 109.279
focus_previous = NodePath("../LineEdit")
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 9 )
max_length = 16
secret = true
clear_button_enabled = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmojiPanel" parent="Sillyword" instance=ExtResource( 2 )]
visible = false
position = Vector2( -137.852, 31.4195 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 2.0
margin_top = 34.0
margin_right = 123.0
margin_bottom = 114.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "[right]Name:

Password:
(3 emojis)[/right]"
text = "Name:

Password:
(3 emojis)"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="meta_clicked" from="Login" to="." method="_on_Login_meta_clicked"]
[connection signal="value_changed" from="VSlider" to="." method="_on_VSlider_value_changed"]
[connection signal="value_changed" from="VSliderG" to="." method="_on_VSliderG_value_changed"]
[connection signal="value_changed" from="VSliderB" to="." method="_on_VSliderB_value_changed"]
[connection signal="meta_clicked" from="LoadPlayer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="focus_entered" from="Sillyword" to="Sillyword" method="_on_Sillyword_focus_entered"]
[connection signal="text_entered" from="Sillyword" to="." method="_on_LineEdit_text_entered"]
